--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "todo-list",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:backend": "cd backend && npm start",
-    "start:frontend": "cd frontend && npm run start",
-    "start": "node index.js"
-  },
+ "scripts": {
+  "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+  "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+  "start:backend": "cd backend && npm start",
+  "start:frontend": "cd frontend && npm run start",
+  "start": "cd backend && node index.js"
+},
+
   "dependencies": {
     "axios": "^1.7.2"
   },
